# EVMore

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  CNAME  CONTRIBUTING.md  LICENSE  README.md  TODO.md  docker-compose.base.yml  docker-compose.yml  jest.config.shared.js  package.json  package.json.template  tsconfig.json  turbo.json
.github/workflows/: deploy-app.yml  deploy-demo.yml
.turbo/daemon/: f1e3538c6f658589-turbo.log.2025-08-03
contracts/cosmwasm/: Cargo.toml  build.sh
contracts/cosmwasm/htlc/: Cargo.toml
contracts/cosmwasm/htlc/src/: constants.rs  contract.rs  dex.rs  error.rs  lib.rs  msg.rs  state.rs  test_helpers.rs  test_osmosis.rs
contracts/cosmwasm/registry/: Cargo.toml
contracts/cosmwasm/registry/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/cosmwasm/router/: Cargo.toml
contracts/cosmwasm/router/src/: constants.rs  contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  registry_integration.rs  routing.rs  state.rs  test_helpers.rs
contracts/cosmwasm/scripts/: deploy-testnet.sh
contracts/cosmwasm/tests/: integration.rs
contracts/ethereum/: hardhat.config.js  package.json
docs/: 404.html  CNAME  DEVELOPMENT_GUIDE.html  DEVELOPMENT_GUIDE.md  DOCUMENTATION_INDEX.md  GITHUB_PAGES_SETUP.md  OPERATIONS_GUIDE.html  OPERATIONS_GUIDE.md  PROTOCOL_DESIGN.html  PROTOCOL_DESIGN.md  README.md  STRETCH_GOALS_IMPLEMENTATION_DETAILS.md  _config.yml  api-reference.html  examples.html  index.html  quick-start.html
docs/@docs/: README.md
docs/api/: index.html
docs/hackathon/: HACKATHON_STATUS.md  PRESENTATION.md  PRESENTATION_SLIDES.md  README.md  STRETCH_GOALS_SUMMARY.md  TODO.md  index.html  script.js  styles.css  test-dynamic-values.html
frontend/: DEMO_SCRIPT.md  README.md  deploy.sh  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.build.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  vite-env.d.ts
libs/config/: README.md  package.json  tsconfig.json
libs/connection-pool/: jest.config.js  package.json
libs/errors/: README.md  package.json  tsconfig.json
libs/ibc/: package.json
libs/interfaces/: README.md  package.json  tsconfig.json
libs/test-utils/: README.md  jest.config.js  package.json  tsconfig.json
libs/types/: API.md  README.md  jest.config.js  package.json  tsconfig.json
libs/utils/: README.md  jest.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
monitoring/: README.md  docker-compose.monitoring.yml
monitoring/alertmanager/: config.yml
relayer/: .env.example  docker-compose.dev.yml  jest.config.js  package.json  tsconfig.json
scripts/: fix-docs-links.js  generate-api-docs.sh  organize-commits.sh  setup-github-pages.sh  update-docs.sh
sdk/: jest.config.cjs  package.json  rollup.config.js  tsconfig.json
tests/: README.md  jest.config.architecture.js  package.json  run-architecture-tests.sh  setup-architecture.ts  setup.ts
(+333 files in other folders)
