[workspace]
members = ["htlc", "router", "registry", "packages/fusion-plus"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["DROO"]
edition = "2025"
license = "MIT"
repository = "https://github.com/hydepwns/evmore"

[workspace.dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
cosmwasm-storage = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

# Osmosis specific dependencies
osmosis-std = "0.20.1"

# Testing dependencies
cw-multi-test = "0.18"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true