[package]
name = "fusion-htlc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
hex = "0.4"
osmosis-std = { workspace = true }
fusion-plus = { path = "../packages/fusion-plus" }

[dev-dependencies]
cw-multi-test = { workspace = true }